--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,20 +1,20 @@
 # This is the resource bundle for App Title
 
 #XTIT: Application name
-appTitle=App Title
+appTitle=Cadastro de Alunos
 
 #YDES: Application description
 appDescription=A Fiori application.
 
 #~~~ Worklist View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 #XTIT: Worklist view title
-worklistViewTitle=Manage <AlunosPlural>
+worklistViewTitle=Cadastrar Alunos
 
 #XTIT: Worklist page title
-worklistTitle=App Title
+worklistTitle=Cadastro de Alunos
 
 #XTIT: Table view title
-worklistTableTitle=<AlunosPlural>
+worklistTableTitle=Alunos
 
 #XTOL: Tooltip for the search field
 worklistSearchTooltip=Enter an <Alunos> name or a part of it.
@@ -23,13 +23,13 @@ worklistSearchTooltip=Enter an <Alunos> name or a part of it.
 worklistNoDataWithSearchText=No matching <AlunosPlural> found
 
 #XTIT: Table view title with placeholder for the number of items
-worklistTableTitleCount=<Alunos> ({0})
+worklistTableTitleCount=Alunos ({0})
 
 #XTIT: The title of the column containing the ID of Alunos
-tableNameColumnTitle=<ID>
+tableNameColumnTitle=Id
 
 #XTIT: The title of the column containing the  and the unit of measure
-tableUnitNumberColumnTitle=<>
+tableUnitNumberColumnTitle=Nome
 
 #XBLI: text for a table with no data
 tableNoDataText=No <AlunosPlural> are currently available
