--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -85,3 +85,5 @@ notFoundText=The requested resource was not found
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+
+btnAdd=Adicionar Aluno
