criacao de aluno

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -87,3 +87,10 @@ notFoundText=The requested resource was not found
 errorText=Sorry, a technical error occurred! Please try again later.
 
 btnAdd=Adicionar Aluno
+
+
+
+btnEditar=Editar
+btnSalvar=Salvar
+btnExcluir=Excluir
+btnCriar=Criar
